# Cappa_smart

./: .gitignore  Aspiration.cpp  BME680.cpp  CMakeLists.txt  Cappa_smart.ino  Display.cpp  Globals.cpp  HalInterface.cpp  LICENSE  LICENSE-EXCEPTION  Logic.cpp  PIR.cpp  README.md  TaskMQTT.cpp
include/: Aspiration.h  BME680.h  Display.h  Globals.h  Logic.h  PIR.h  SystemState.h  TaskMQTT.h  halInterface.h
test/: Arduino.h  CMakeLists.txt  Globals_test.cpp  Globals_test.h  test_aspiration.cpp  test_logic.cpp
